# requote

./: .gitignore  .pre-commit-config.yaml  .yapf.style  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  requote.py
src/requote/: requote.py
tests/: test_quote_char.py  test_quote_style.py  test_requote.py  test_requote_code.py
