[project]
name = "requote"
version = "0.1.0"
description = "A command line tool to unify quotes in python files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.mypy]
strict = true
ignore_missing_imports = true
