[project]
name = "requote"
version = "0.1.0"
description = "A command line tool to unify quotes in python files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-n 4"
empty_parameter_set_mark = "xfail"
filterwarnings = [
  "ignore::DeprecationWarning"
]
