[project]
name = "requote"
version = "1.0.0"
description = "A command line tool to unify quotes in python files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

scripts = { requote = "requote.requote:main"}

[project.urls]
homepage = "https://github.com/ece-mohammad/requote"
repository = "https://github.com/ece-mohammad/requote"
documentation = "https://github.com/ece-mohammad/requote"
"Bug Tracker" = "https://github.com/ece-mohammad/requote/issues"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pytest-xdist = "^3.6.1"
pylint = "^3.3.7"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pytest-sugar = "^1.0.0"
tox = "^4.26.0"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=requote --cov-report lcov:lcov.info --cov-branch"
empty_parameter_set_mark = "xfail"
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.coverage.run]
omit = [
  "tests/"
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "def __str__",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
